# 3d-renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  todo.txt
.cache/clangd/index/: camera.c.EF3C8D28802C22B9.idx  camera.h.FFC223E5EC9BA041.idx  constants.h.255AFA046E9DD89F.idx  geometry.c.17E289541C6888D3.idx  geometry.h.2E44C689A077682B.idx  input.c.277E31A50A800465.idx  input.h.C5B81E9D68028D5F.idx  line.c.29E08DC24B64EEBC.idx  line.h.F05D71BE94E0BAE0.idx  main.c.9080ED2145F86FC6.idx  model.c.91BAA27B59AAB32D.idx  model.h.217D7A5E2179C315.idx  obj_reader.c.A8D0E50A868AA42E.idx  obj_reader.h.6E6754D4F99B649B.idx  render_pipeline.h.20C375C33413DC04.idx  transform.c.A7CF12D63AB57986.idx  transform.h.5C3C6095ED3C274C.idx  triangle.c.969ED20A33290E54.idx  triangle.h.3FC65EE367756821.idx
assets/CubeBasic/cube2/: Simple_Cube_in_OBJ_FBX_format.mtl
assets/M9-Bayonet/: M9_Bayonet.mtl
assets/ToyotaOBJ/: scene.mtl
assets/glckruger/: glck rgr hybrid.mtl
include/: camera.h  constants.h  geometry.h  model.h  obj_reader.h  render_pipeline.h  transform.h  triangle.h
src/: camera.c  camera.h  constants.h  geometry.c  geometry.h  input.c  input.h  line.c  line.h  main.c  model.c  model.h  obj_reader.c  obj_reader.h  render_pipeline.c  transform.c  transform.h  triangle.c  triangle.h
